--- a/muensterdiscovery/src/i18n/it.json
+++ b/muensterdiscovery/src/i18n/it.json
@@ -107,6 +107,43 @@
     "chat.example3": "Ho 45min di tempo. Quale percorso potrei fare?",
     "chat.quickstart": "Avvio rapido:",
 
-    "chat.placeholder": "Scrivi un messaggio..."
+    "chat.placeholder": "Scrivi un messaggio...",
+
+        "playroute.visited": "Già visitato",
+    "playroute.get_closer": "Sei ancora troppo lontano per spuntare questo PDI.",
+    "playroute.approx_distance": "Ancora ca. ",
+    "playroute.mark_visited": "Spunta PDI",
+    "playroute.route_completed_header": "Congratulazioni! Hai completato il percorso!",
+    "playroute.route_completed_description": "Hai visitato tutti i PDI di questo percorso. Continua così!",
+    "playroute.back_to_routes": "Torna alla selezione",
+    "playroute.abort": "Interrompi missione",
+    "playroute.found_progress": "{visited} / {total} TROVATI",
+    "playroute.gps_error": "Errore GPS",
+    "playroute.gps_signal_lost": "Segnale GPS perso",
+    "playroute.gps_signal_lost_desc": "Non riusciamo a determinare la tua posizione. Le funzioni di prossimità sono disabilitate. Puoi esplorare i marcatori manualmente.",
+    "playroute.nearest_signal": "LUOGO PIÙ VICINO",
+    "playroute.distance_away": "a {distance}m",
+    "playroute.signal_acquired": "Nelle vicinanze",
+    "playroute.signal_acquired_desc": "Hai raggiunto il luogo. Decifra le informazioni per aggiungerle al tuo registro.",
+    "playroute.collect_intel": "Raccogli dati...",
+    "playroute.signal_locked": "Troppo lontano",
+    "playroute.signal_locked_desc": "Contenuto crittografato. Avvicinati a meno di 50m per sbloccare.",
+    "playroute.navigate_signal": "NAVIGA",
+    "playroute.mission_log": "Diario ({count})",
+    "playroute.mission_complete": "Missione Compiuta!",
+    "playroute.mission_complete_desc": "Hai esplorato con successo tutti i luoghi in {route}.",
+    "playroute.return_base": "Indietro",
+    "playroute.loading_mission": "Caricamento missione...",
+    "playroute.nav.title": "Navigazione",
+    "playroute.nav.loading": "Calcolo percorso...",
+    "playroute.nav.stop": "Interrompi navigazione",
+    "playroute.nav.error": "Navigazione fallita: {message}",
+    "playroute.nav.instruction": "{action} tra {distance} m su {street}",
+    "playroute.nav.unnamed_road": "strada senza nome",
+    "playroute.nav.action.continue": "Prosegui dritto",
+    "playroute.nav.action.turn_left": "Svolta a sinistra",
+    "playroute.nav.action.turn_right": "Svolta a destra",
+    "playroute.nav.action.arrive": "Destinazione raggiunta"
+
 
 }
