--- a/muensterdiscovery/src/i18n/nl.json
+++ b/muensterdiscovery/src/i18n/nl.json
@@ -107,6 +107,43 @@
     "chat.example3": "Ik heb 45min tijd. Welke route kan ik doen?",
     "chat.quickstart": "Snelle start:",
 
-    "chat.placeholder": "Typ een bericht..."
+    "chat.placeholder": "Typ een bericht...",
+
+        "playroute.visited": "Al bezocht",
+    "playroute.get_closer": "Je bent nog te ver weg om deze POI af te vinken.",
+    "playroute.approx_distance": "Nog ong. ",
+    "playroute.mark_visited": "POI afvinken",
+    "playroute.route_completed_header": "Gefeliciteerd! Je hebt de route voltooid!",
+    "playroute.route_completed_description": "Je hebt alle POI's op deze route bezocht. Ga zo door!",
+    "playroute.back_to_routes": "Terug naar routes",
+    "playroute.abort": "Missie afbreken",
+    "playroute.found_progress": "{visited} / {total} GEVONDEN",
+    "playroute.gps_error": "GPS Fout",
+    "playroute.gps_signal_lost": "GPS-signaal verloren",
+    "playroute.gps_signal_lost_desc": "We kunnen je locatie niet bepalen. Nabijheidsfuncties zijn uitgeschakeld. Je kunt de markeringen handmatig verkennen.",
+    "playroute.nearest_signal": "DICHTSTBIJZIJNDE PLEK",
+    "playroute.distance_away": "{distance}m afstand",
+    "playroute.signal_acquired": "In de buurt",
+    "playroute.signal_acquired_desc": "Je hebt de locatie bereikt. Ontsleutel de informatie om deze aan je logboek toe te voegen.",
+    "playroute.collect_intel": "Gegevens verzamelen...",
+    "playroute.signal_locked": "Te ver weg",
+    "playroute.signal_locked_desc": "Inhoud versleuteld. Kom binnen 50m om te ontgrendelen.",
+    "playroute.navigate_signal": "NAVIGEREN",
+    "playroute.mission_log": "Logboek ({count})",
+    "playroute.mission_complete": "Missie Voltooid!",
+    "playroute.mission_complete_desc": "Je hebt succesvol alle locaties in {route} verkend.",
+    "playroute.return_base": "Terug",
+    "playroute.loading_mission": "Missie laden...",
+    "playroute.nav.title": "Navigatie",
+    "playroute.nav.loading": "Route berekenen...",
+    "playroute.nav.stop": "Navigatie stoppen",
+    "playroute.nav.error": "Navigatie mislukt: {message}",
+    "playroute.nav.instruction": "{action} over {distance} m op {street}",
+    "playroute.nav.unnamed_road": "naamloze weg",
+    "playroute.nav.action.continue": "Rechtdoor",
+    "playroute.nav.action.turn_left": "Links afslaan",
+    "playroute.nav.action.turn_right": "Rechts afslaan",
+    "playroute.nav.action.arrive": "Bestemming bereikt"
+
 
 }
