--- a/muensterdiscovery/src/i18n/tk.json
+++ b/muensterdiscovery/src/i18n/tk.json
@@ -104,5 +104,42 @@
     "chat.example3": "45 dakikam var. Hangi rotayı yapabilirim?",
     "chat.quickstart": "Hızlı başlangıç:",
 
-    "chat.placeholder": "Mesaj yazın..."
+    "chat.placeholder": "Mesaj yazın...",
+
+        "playroute.visited": "Ziyaret edildi",
+    "playroute.get_closer": "Bu noktayı işaretlemek için henüz çok uzaktasınız.",
+    "playroute.approx_distance": "Yaklaşık ",
+    "playroute.mark_visited": "Noktayı işaretle",
+    "playroute.route_completed_header": "Tebrikler! Rotayı tamamladınız!",
+    "playroute.route_completed_description": "Bu rotadaki tüm noktaları ziyaret ettiniz. Aynen devam!",
+    "playroute.back_to_routes": "Rota seçimine dön",
+    "playroute.abort": "Görevi iptal et",
+    "playroute.found_progress": "{visited} / {total} BULUNDU",
+    "playroute.gps_error": "GPS Hatası",
+    "playroute.gps_signal_lost": "GPS Sinyali Kaybedildi",
+    "playroute.gps_signal_lost_desc": "Konumunuzu belirleyemiyoruz. Yakınlık özellikleri devre dışı bırakıldı. İşaretçileri manuel olarak keşfedebilirsiniz.",
+    "playroute.nearest_signal": "EN YAKIN YER",
+    "playroute.distance_away": "{distance}m uzakta",
+    "playroute.signal_acquired": "Yakında",
+    "playroute.signal_acquired_desc": "Konuma ulaştınız. Günlüğünüze eklemek için bilgilerin şifresini çözün.",
+    "playroute.collect_intel": "Veri topla...",
+    "playroute.signal_locked": "Çok uzakta",
+    "playroute.signal_locked_desc": "İçerik şifreli. Kilidi açmak için 50m yaklaşın.",
+    "playroute.navigate_signal": "NAVİGASYON",
+    "playroute.mission_log": "Günlük ({count})",
+    "playroute.mission_complete": "Görev Tamamlandı!",
+    "playroute.mission_complete_desc": "{route} içindeki tüm yerleri başarıyla keşfettiniz.",
+    "playroute.return_base": "Geri",
+    "playroute.loading_mission": "Görev Yükleniyor...",
+    "playroute.nav.title": "Navigasyon",
+    "playroute.nav.loading": "Rota hesaplanıyor...",
+    "playroute.nav.stop": "Navigasyonu durdur",
+    "playroute.nav.error": "Navigasyon başarısız: {message}",
+    "playroute.nav.instruction": "{street} üzerinde {distance} m sonra {action}",
+    "playroute.nav.unnamed_road": "isimsiz yol",
+    "playroute.nav.action.continue": "Düz devam et",
+    "playroute.nav.action.turn_left": "Sola dön",
+    "playroute.nav.action.turn_right": "Sağa dön",
+    "playroute.nav.action.arrive": "Hedefe ulaşıldı"
+
 }
