--- a/muensterdiscovery/src/i18n/de.json
+++ b/muensterdiscovery/src/i18n/de.json
@@ -122,6 +122,37 @@
     "playroute.route_completed_header": "Herzlichen Glückwunsch! Du hast die Route abgeschlossen!",
     "playroute.route_completed_description": "Du hast alle POIs auf dieser Route besucht. Weiter so!",
     "playroute.back_to_routes": "Zurück zur Routenauswahl",
+    "playroute.abort": "Mission abbrechen",
+    "playroute.found_progress": "{visited} / {total} GEFUNDEN",
+    "playroute.gps_error": "GPS Fehler",
+    "playroute.gps_signal_lost": "GPS Signal verloren",
+    "playroute.gps_signal_lost_desc": "Wir können deinen Standort nicht ermitteln. Proximity-Features sind deaktiviert. Du kannst die Marker manuell erkunden.",
+    "playroute.nearest_signal": "NÄCHSTE SEHENSWÜRDIGKEIT",
+    "playroute.distance_away": "{distance}m entfernt",
+    "playroute.signal_acquired": "In der Nähe",
+    "playroute.signal_acquired_desc": "Du hast den Ort erreicht. Entschlüssele die Informationen, um sie deinem Log hinzuzufügen.",
+    "playroute.collect_intel": "Daten sammeln..",
+    "playroute.signal_locked": "Bisher zu weit entfernt",
+    "playroute.signal_locked_desc": "Inhalt verschlüsselt. Nähere dich auf 50m, um ihn freizuschalten.",
+    "playroute.navigate_signal": "NAVIGIEREN",
+    "playroute.mission_log": "Logbuch ({count})",
+    "playroute.mission_complete": "Mission Komplett!",
+    "playroute.mission_complete_desc": "Du hast erfolgreich alle Orte in {route} erkundet.",
+    "playroute.return_base": "Zurück",
+    "playroute.loading_mission": "Lade Mission...",
+    "playroute.nav.title": "Navigation",
+    "playroute.nav.loading": "Route wird berechnet…",
+    "playroute.nav.stop": "Navigation stoppen",
+    "playroute.nav.error": "Navigation fehlgeschlagen: {message}",
+
+    "playroute.nav.instruction": "{action} in {distance} m auf {street}",
+    "playroute.nav.unnamed_road": "unbenannte Straße",
+
+    "playroute.nav.action.continue": "Geradeaus",
+    "playroute.nav.action.turn_left": "Links abbiegen",
+    "playroute.nav.action.turn_right": "Rechts abbiegen",
+    "playroute.nav.action.arrive": "Ziel erreicht"
+
 
     "chat.example1": "Welche Erreignisse habe ich bereits abgeschlossen?",
     "chat.example2": "Wo kann ich die Bestenliste finden?",
