--- a/muensterdiscovery/src/i18n/de.json
+++ b/muensterdiscovery/src/i18n/de.json
@@ -52,6 +52,7 @@
     "profile.achievement3_title": "Weihnachtsmarkt-Fan",
     "profile.achievement3_desc": "Alle Weihnachtsmärkte besucht",
     "profile.invalid_image": "Bitte wähle eine gültige Bilddatei aus.",
+    "profile.visited_at": "Besucht am:",
 
     "leaderboard.title": "Rangliste",
     "leaderboard.subtitle": "Wer hat Münster am besten erkundet?",
