--- a/muensterdiscovery/src/i18n/en.json
+++ b/muensterdiscovery/src/i18n/en.json
@@ -51,6 +51,7 @@
     "profile.achievement3_title": "Christmas Market Fan",
     "profile.achievement3_desc": "Visited all Christmas markets",
     "profile.invalid_image": "Please select a valid image file.",
+    "profile.visited_at": "Visited at:",
 
     "leaderboard.title": "Leaderboard",
     "leaderboard.subtitle": "Who explored Münster best?",
