de, es, fr, it, jp translation descriptions

--- a/muensterdiscovery/src/i18n/jp.json
+++ b/muensterdiscovery/src/i18n/jp.json
@@ -143,7 +143,167 @@
     "playroute.nav.action.continue": "直進",
     "playroute.nav.action.turn_left": "左折",
     "playroute.nav.action.turn_right": "右折",
-    "playroute.nav.action.arrive": "目的地到着"
+    "playroute.nav.action.arrive": "目的地到着",
+
+    "poi.1": "城はミュンスターにある建物群です。建物はU字型に建てられています。城の前には前庭があり、後ろにはミュンスター植物園があります。城はミュンスター大学の行政建物として使用され、講義室やセミナールームがあります。",
+    "poi.2": "ウーバーワッサー教会はその所在地にちなんで名付けられました。聖パウロ大聖堂から見ると、この教会に行くには“水”（Aa川）を渡る必要があります。ウーバーワッサー教会は最古の教会の一つで、9世紀末には前身の建物が存在していました。現在の形になったのは15世紀ですが、第二次世界大戦で破壊された後、広範囲にわたり修復されました。",
+    "poi.3": "ドム広場は聖パウロ大聖堂の前にある広場です。1916年まで、年に三回センドフェアがここで開催され、その後シュロス広場に移動しました。現在は毎週水曜と金曜に市場が開かれ、新鮮な食材や花などが販売されています。",
+    "poi.4": "聖パウロ大聖堂はミュンスター教区の母教会で、13世紀に建てられました。大聖堂には身廊と側廊があり、多くの芸術作品も建物内にあります。",
+    "poi.6": "キーペンケルは田舎と都市の間で日用品を“キーペ”（背負いかご）で運ぶ小さな商人でした。現在、キーペンケルはミュンスターと周辺地域の伝統的な象徴となっています。",
+    "poi.7": "ライ麦市場（ローゲンマルクト）はプリンツィパルマルクトにあり、旧魚市場とともにミュンスターで最も古い市場の一つです。ライ麦の取引にちなんで名付けられました。ローゲンマルクトには多くの歴史的商家がありましたが、ほとんどは第二次世界大戦で完全に破壊されました。写真の建物は精巧な装飾とシャッターでオリジナルのファサードを確認できます。",
+    "poi.8": "ライ麦市場（ローゲンマルクト）はプリンツィパルマルクトにあり、旧魚市場とともにミュンスターで最も古い市場の一つです。ライ麦の取引にちなんで名付けられました。ローゲンマルクトには多くの歴史的商家がありましたが、ほとんどは第二次世界大戦で完全に破壊されました。写真の建物は精巧な装飾とシャッターでオリジナルのファサードを確認できます。",
+    "poi.9": "聖ランベルト教会は14〜15世紀に後期ゴシック様式で現在の形に建てられました。ミュンスターは一時期アナバプテスト派の影響を受け、その三人の指導者は権力回復後、檻に吊るされて処刑されました。元の三つの檻は今日も教会南側に残っています。",
+    
+    "poi.10": "歴史的市庁舎はプリンツィパルマルクトに位置し、1648年の三十年戦争を終結させたミュンスターおよびオスナブリュックの和平交渉で特に有名になりました。建物は第二次世界大戦で破壊され、1958年に再建されました。",
+    "poi.11": "ザルツ通りはミュンスター最古の交易路で、現在は歩行者天国です。特徴は1993年に地面に埋め込まれたハンザ同盟都市の真鍮縁石です。いくつ見つけられますか？",
+    "poi.12": "エルプドロステンホフは1753〜1757年に建設され、城を設計したヨハン・コンラート・シュラウンによる設計です。バロック様式の貴族の宮殿で、当時のミュンスター市高官のための建物でした。現在は講演会、コンサート、授賞式など文化・学術イベントに使用されています。",
+    "poi.13": "市立博物館は1979年に設立され、1982年にアナバプテスト派に関する展示で開館しました。1989年に現在の建物に移転。ミュンスターの歴史を展示し、企画展も開催しています。",
+    "poi.14": "現在の新シナゴーグは1961年に建てられました。以前のシナゴーグは同じ場所にありましたが、1938年の水晶の夜で破壊されました。",
+    "poi.15": "植物園は1803年に研究・教育のために設立されました。また、生物多様性や種の保存にも重要です。市民は植物園を静かな休息の場として利用し、時にはガイドツアーも行われます。",
+    "poi.16": "カフェ・ファムは2018年からのバー兼カフェで、朝食、ランチ、手作りパンやケーキとともにコーヒーを楽しめます。",
+    "poi.17": "ラ・ティエンダは1993年設立の団体で、ボランティア活動によって運営されています。公正取引製品の販売、教育活動、啓発が主な目的で、利益は教育に投資されます。",
+    "poi.18": "誰でも利用できる公共の本棚です。本を一冊取ることができますが、代わりに別の本を置く必要があります。本の交換や新しい知識を得る素敵な機会です。",
+    "poi.19": "この店は1994年に創業され、主にイタリア、フランス、ポルトガル、さらにチュニジアからの製品を提供しています。",
+    
+    "poi.20": "さまざまなアーティストや販売者の作品を扱う可愛い店。特徴は各アーティストに専用コーナーがあることです。アクセサリー、食品、アルコール、家庭用品、装飾品などが揃っています。",
+    "poi.21": "主に高品質の布で作られたフェアトレード衣類を扱う小売店です。",
+    "poi.22": "主にお茶と茶器を販売する小さな店。加えて日本のキッチン用品も手に入ります。",
+    "poi.23": "衣類、装飾品、アクセサリーを扱う店で、一部はヴィーガン、手作り、または公正に生産されたものです。",
+    "poi.24": "地元の飲料、アルコール、装飾品、ミュンスターのお土産、文房具、スナックを扱う店。スタッフは親切に商品やギフトの相談に応じます。",
+    "poi.25": "アルカーデン地下にあるオーガニックスーパー。街中で軽食を取るのに便利です。",
+    "poi.26": "「グルーネ・ヴィーゼ」に似た衣料店で、高品質の布で作られた服を提供しています。",
+    "poi.27": "美味しく親切なスタッフがいるヴィーガンレストラン。",
+    "poi.28": "『巨大ビリヤードボール』は1977年のクラース・オルデンバーグの彫刻プロジェクト。元は白ですが、アーティストや人々によって色やメッセージで塗り替えられ、再び白に戻されることを繰り返します。",
+    "poi.29": "ミュンスターは自転車の街です。e-motionストアのファサードには自転車のモチーフがあります。",
+    
+    "poi.30": "黄永平の彫刻はデュシャンの「ボトルラック」(1914)と、第二次世界大戦の爆撃で腕を失った聖ルドゲリ教会のキリスト像から着想を得ました。六メートルのボトルラックには50本の彫刻の腕があり、観音菩薩を連想させます。",
+    "poi.31": "見落としがちな家のファサードにある小さなカリヨン。毎日12時、16時、17時、18時に音楽が鳴ります。",
+    "poi.32": "シナゴーグの近くにオットー・フロイントリッヒの彫刻があります。彼は1878年生まれのユダヤ人共産主義者で、1943年ナチス強制収容所で亡くなりました。",
+    "poi.33": "居心地の良いベーカリー。シュルンツベーカリーは座席エリアの壁のデザインが特徴的です。",
+    "poi.34": "アイゼンバーン通りバス停近くに、猿に変身した5つの電気ボックスがあります。",
+    "poi.35": "ウェーブは港の遊歩道沿いにあります。ファサードはパワースポーツフィットネススタジオのものです。",
+    "poi.36": "クルティ・ケバブの内装はベルリンとグラフィティをテーマにしています。",
+    "poi.37": "壁にはマスクをしたメキシコのレスラーが戦っている様子が描かれています。",
+    "poi.38": "イリュージョンペイントで古いフォルクスワーゲン・ブリッキーが駐車されたガレージが見えます。",
+    "poi.39": "ミュンスター郊外に住む3匹のかわいい子猿。",
+    
+    "poi.40": "聖域とは、教会や寺院のような神聖で保護された場所です。ミュンスターの聖域は、内部に入れない円形のレンガの壁で構成されています。特に夏には、ここで過ごすのに素晴らしい場所です。",
+    "poi.41": "ミュンスター中心部にある教区図書館の新館は、建築家マックス・デュドラーの設計で2005年12月に開館しました。約70メートルの長さの箱型で、大きな本棚を思わせる構造です。図書館は旧神学校（現在のリウドガーハウス）と『Bibliotheksgasse（図書館小路）』という10メートル幅の路地で隔てられています。",
+    "poi.42": "博物館は中世初期から現代までの美術作品を展示しています。展示品は30万点以上。歴史的な所蔵品には地域および周辺地域の芸術作品も含まれます。また、旧建物の壁の遺構も見ることができます。",
+    "poi.43": "戦後、この場所は長い間駐車場として使われていました。建築コンペの後、1976年に現代的な商業・オフィス・住宅複合施設が建設されました。また、3,000人を収容できる防護シェルターも設置されました。",
+    "poi.44": "6棟の建物がつながっており、混雑するローテンブルク通りとルドゲリ通りの歩行者天国を3〜4階建ての大きな通路で公共的に結んでいます。ここではさまざまな店舗で買い物をしたり、ピカソ美術館を訪れることもできます。",
+    "poi.45": "シュトゥーベンガッセは中世から知られる通りで、名前はかつてここにあった浴場に由来します。1610年以降も存在していました。現在はストリートパフォーマーやデモ参加者、音楽家などの集まる場所です。",
+    "poi.46": "クレメンス教会はバロック様式の修道院・病院教会で、1745〜1753年にヨハン・コンラート・シュラウンの設計で慈悲兄弟団のために建設されました。修道院は1811年に廃止されました。",
+    "poi.47": "市立図書館の建物は1991〜1993年に建設されました。中央を通る路地は建物内部の洞察を提供し、彫刻が開放感を象徴しています。伝統と現代性を兼ね備えた知識・交流・創造の場です。",
+    "poi.48": "テアター・ミュンスターは1956年2月4日に開館し、戦後ドイツで最初の大規模新劇場建築の一つです。国際的に現代建築の重要例とされます。起源は1774年のコメディーハウスに遡ります。1971年に小劇場が追加されました。",
+    "poi.49": "ツヴィンガーは16世紀に都市防衛の砦として建てられました。戦闘にもかかわらず、壁は現在も残っています。500年の歴史の中で、刑務所、馬車場、画家のアトリエ、ヒトラーユーゲントの文化センターとしても使用されました。1997年に暴力被害者の記念碑として整備され、夏には数ユーロで内部見学が可能です。",
+    
+    "poi.50": "シュロスシアター映画館は1953年建築で、文化財に登録されています。ドイツ初の映画クラブがあり、1995年に1920年代劇場風に改装されました。現在はヨーロッパのアートハウス映画や特別イベント、映画祭を開催しています。",
+    "poi.51": "クロイツヴィルテル中心部にあるヘイリヒ・クロイツ教会は1899〜1902年建築です。塔の四面に「Ja, ich bin da（はい、ここにいます）」という文字が設置されています。",
+    "poi.52": "レーゼルド通りはクロイツヴィルテルの中心的な通りの一つで、1557〜1566年のレーゼルド司教にちなんで名付けられました。19〜20世紀初期の文化財建築が特徴です。",
+    "poi.53": "レーゼルド通りはクロイツヴィルテルの中心街で、レーゼルド司教にちなんで名付けられています。高い番号の建物は多層住宅や一戸建て、19〜20世紀初期の文化財建築が混在しています。",
+    "poi.54": "シュール通りはクロイツヴィルテルの通りの一つで、春には桜がピンク色に咲き、周囲の建築と相まって美しい撮影スポットとなります。",
+    "poi.55": "シュタット通りはクロイツヴィルテルの通りで、名誉市民であったコンラート・フォン・シュタット博士にちなんで名付けられました。19世紀後半にヴェストファーレン州の教育大臣兼総監として活躍しました。",
+    "poi.56": "ラザレット通りは1875年に設立され、当時ネウトールの軍病院（スタンドラートラザレット）に由来します。通りは北方向に走り、かつての病院複合施設を囲んでいました。現在、建物は独独蘭軍団の所有です。",
+    "poi.57": "クライマン通りは遊歩道沿いの緑地に並行しており、犬の遊び場としても使用されます。1900年に市議会議員アドルフ・クライマンにちなんで命名され、クロイツシャンツェの一部を整備しました。",
+    "poi.58": "クロイツヴィルテルのローストバーは人気のカフェです。夏には外でコーヒーとケーキを楽しみながら街の喧騒を眺められます。",
+    "poi.59": "ブッデン塔は旧市壁の中で最も古く、12世紀に建てられた防御塔です。1533年には刑務所として、1598年以降は火薬塔として使用されました。「ブッデン」は古低地ドイツ語で悪魔を意味します。",
+    
+    "poi.60": "アンティキュアリアト・ゾルダー（別名アンティキュアリアト・ヴィルスベルク）はミュンスターの普通の古本屋です。年に数回、ドイツのテレビシリーズ『ヴィルスベルク』の撮影場所になります。",
+    "poi.61": "2014年ワールドカップ準決勝でドイツがブラジルに7:1で勝利したことは伝説的でした。さらに信じられないことに、ミュンスターのある男性がREWEスーパー前でこの結果を予言しました。",
+    "poi.62": "地元テレビ番組で、特に横断歩道での自転車の禁止運転に関する短編動画が放送されました。ある男性は行動を議論し、ノートパソコンと調査資料を持って戻り、自分の権利を証明しました。これがその横断歩道です。",
+    "poi.63": "2019年の『タートル・フォルクス』エピソード「ヴェーテルヒェン・フロスト」の撮影で、聖ランベルト教会のクリスマスマーケットが使用されました。",
+    "poi.64": "『タートル・ミュンスター』の繰り返しのシーン。新しいエピソード撮影時、この場所は数分〜数時間閉鎖されることがあります。",
+    "poi.65": "ドイツの人気TV番組『Bares für Rares』では、ディーラーのダニエル・マイヤーがミュンスター旧市街近くの古物商を所有し、番組と実際の場所を結びます。",
+    "poi.66": "2024年、遊歩道近くの池が緑色になり、抹茶ドリンクに似ていたため人気となりました。「マッチャ湖」と呼ばれ、一時的に公式の観光地にも登録されました。",
+    "poi.67": "2006年頃、アーゼーにペトラという黒鳥が現れました。白鳥型のペダルボートの近くに滞在し、数年間続いた異例の愛の物語で有名になりました。その後ペトラは姿を消しました。",
+    "poi.68": "タッケスブルクは19世紀に建てられた住宅で、美しく、興味深く、少し不気味でもあります。",
+    "poi.69": "パブロ・ピカソ広場は一見普通の建物の間のスペースですが、赤と灰色の敷石がピカソの肖像を形成しています。",
+    
+    "poi.70": "『ヒンメルスレーダー』は2022年から2024年春、再び2024年秋に設置されました。特別なのは、近くで見ると教会内で光り続けることです。",
+    "poi.71": "『フーコーの振り子』はゲルハルト・リヒターによる2018年の作品で、ドミニカーナ教会に設置されています。科学と現代アートを組み合わせ、教会内に特別な雰囲気を作り出します。",
+    "poi.72": "Aa川は時々ミュンスターで見えなくなります。ミュンツ通りからアイギディマルクトまで歩くと、街の中心にある静かで緑豊かなルートを楽しめます。",
+    "poi.73": "カフェ1648は市内中心部にありますが、スタットハウス11階にあるため見落としやすいです。ミュンスターの景色を一望できる隠れた名所です。",
+    "poi.74": "遊歩道は2007年、TV犯罪シリーズ『タートル』の撮影に初めて使用されました。登場人物フランク・ティールは自転車で遊歩道を走ります。",
+    "poi.75": "プリンツィパルマルクトは12世紀頃から存在する古い市街の商店街です。1611年以降この名前で呼ばれます。第二次世界大戦で大部分が破壊されましたが、戦後オリジナルの様式で再建されました。現在は主に高級ブランドショップが立ち並びます。",
+    "poi.76": "劇場外で特定の位置に立つと、建物がトイレのように見える視覚トリックがあります。面白い錯覚スポットです。",
+    "poi.77": "ロンベルガー宮殿はかつて古典主義の貴族の宮殿でした。現在は廃墟と戦争を生き延びた大きな古木が、劇場の中庭庭園で舞台セットのように立っています。",
+    "poi.78": "クロイツヴィルテル地区の中心にある主要スポットはヘイリヒ・クロイツ教会です。近くにはこの教会を描いた電気ボックスもあります。",
+    "poi.79": "クロイツヴィルテル地区、遊歩道近くに小さな遊び場があり、小さなボルダリングウォールが可愛いリスに守られています。",
+    
+    "poi.80": "この場所は「ヴェストファーレン平和広場」と名付けられました。1648年の三十年戦争終結から350年後の1998年に命名されました。歴史的市庁舎の背後に位置しています。",
+    "poi.81": "この場所は1759年に「ノイプラッツ」として正式に広場となりました。1927年に「ヒンデンブルク広場」と改名され、2012年に「シュロスプラッツ」と呼ばれるようになりました。長年にわたり、主にパレードやイベントの大広場として利用され、イベントがない場合は駐車場として使用されます。",
+    "poi.82": "クレメンス・アウグスト・グラフ・フォン・ガーレンはミュンスターの司教で、後に枢機卿となりました。ナチス政策への勇敢な反対で有名で、政権下を生き延び、1946年に亡くなり、後にベネディクト16世により列福されました。",
+    "poi.83": "『トリュンメルロック』は第二次世界大戦によるミュンスターの破壊と再建を思い起こさせるものです。戦後の瓦礫撤去に使用された機関車です。",
+    "poi.84": "聖ルドゲリ教会はミュンスター最古の教会の一つで、1173年にロマネスク様式で建てられました。塔はロマネスクとゴシックの要素を融合しています。",
+    "poi.85": "聖セルヴァティ教会は約1230年に建てられた歴史ある教会です。第二次世界大戦で大部分が破壊され、1947年に再建されました。後期ロマネスクと初期ゴシックの要素を併せ持ちます。",
+    "poi.86": "聖ペーター教会は1590〜1597年にイエズス会カレッジの教会として建てられました。現在は学校教会として使用され、音響が良いためコンサートでも人気です。",
+    "poi.87": "聖マルティニ教会は1180年代に建てられたミュンスター最古級の教会の一つです。現在はミュンスター司教区の最初のユース教会となっています。",
+    "poi.88": "聖書博物館はミュンスター大学の一部で、1997年に設立されました。手稿から現代まで、1500点以上の展示で聖書の歴史を示しています。",
+    "poi.89": "地球の歴史、構造、化石についての展示がある面白く無料の博物館です。インタラクティブ要素もあり、地球について学ぶのに適した場所です。",
+    
+    "poi.90": "この博物館は大聖堂近くのフュルステンベルクハウス内にあります。最初の考古学コレクションは1883年に遡りますが、戦争で破壊されました。1958年以降、再建され新しいコレクションが集められました。",
+    "poi.91": "2000年に開館し、パブロ・ピカソの異なる創作時代の版画や他技法の作品を収蔵しています。展示品は800点以上あります。",
+    "poi.92": "シュタットハウスタワーは1902〜1907年に市庁舎の一部として建てられました。第二次世界大戦を生き延び、現在はプリンツィバーが入っています。",
+    "poi.93": "聖アイギディ教会はミュンスター中心部に位置します。1725年建築で、第二次世界大戦で比較的無傷で残り、天井画は一時的に塗りつぶされましたが、1983年に再び公開されました。",
+    "poi.94": "Geo1は大学の建物の一つで、2013〜2014年に建設され、地理学、景観生態学、地理情報学の学科が入っています。",
+    "poi.95": "カプチン修道院は1862年に開設され、その後近代化されました。修道院庭園の外壁沿いには宗教的記念碑があります。",
+    "poi.96": "ナチス政権による書籍焼却の記念碑で、「文化的野蛮さ」を思い起こさせます。",
+    "poi.97": "この記念碑は1925年に建立され、第一次世界大戦及び第二次世界大戦で亡くなった第13歩兵連隊の兵士を記念しています。象徴は軍事的犠牲を称える伝統的で無批判的な形式を反映しています。",
+    "poi.98": "建物は19世紀末のもので、現在はヴィルヘルム・ヒュッファー財団として使用されています。創設者ヴィルヘルム・ヒュッファーは商人で、父ヨハン・ヘルマン・ヒュッファーも市長でした。",
+    "poi.99": "これは旧ミュンスター動物園の入り口でした。19世紀末にヘルマン・ランドワイスにより設立され、現在は公園のような景観として当時の記憶を残しています。",
+    
+    "poi.100": "フクロウの家は旧動物園の数少ない建物の一つです。かつてフクロウや猛禽類の避難所として使用されました。動物園の多くの建物は失われましたが、この建物は現存しています。",
+    "poi.101": "オブザーヴァンテン教会はフランシスコ会オブザーヴァント派の修道院教会でしたが、1811年以降は大学のプロテスタント教会として使用されています。第二次世界大戦で破壊された後、再建され、礼拝やコンサートに利用されています。",
+    "poi.102": "司教宮殿はミュンスター司教の居住地で、総代局の本部です。1732年建設、戦争で破壊され簡素化して再建され、現在は司教区の中心建物です。",
+    "poi.103": "2021年8月以降、旧ホテル・ユーバーヴァッサーホフは学生向けに59戸のアパートメントを提供しています。住宅ユニットは3階に分かれ、サイズと価格帯が異なります。",
+    "poi.104": "ピンクス・ミュラーは1866年創業の醸造所で、歴史ある「クーフィアテル」にあります。市内唯一の醸造所で、世界中にビールを出荷しています。外の自動販売機でビールを試すこともできます。",
+    "poi.105": "建物は20世紀初頭のもので、1973年に取り壊される予定でしたが、占拠され保存されました。戦後ドイツ初のハウス占拠の一つです。現在はレストランとして使用され、文化イベントも開催されます。",
+    "poi.106": "ダヴィッドワッヘはハンブルクの伝説的な警察署に由来するバーです。ユーデフェルダー通りの始まりにあり、特に水曜と金曜はパーティー通りとして人気です。",
+    "poi.107": "フランツ・フォン・フュルステンベルクは1729年アルンスベルク生まれ。18世紀後半の著名な政治家で、教育改革を導入し、義務教育化を進めました。",
+    "poi.108": "この赤い文字は大学図書館のガラスファサードに設置されています。2009年の改修以来設置され、作成者はババク・サエドです。情報の批判的使用を思い起こさせる意図があります。",
+    "poi.109": "城の近くのこのレリーフ地図は、旧市壁内のミュンスター中心部の地図を示しています。",
+    
+    "poi.110": "大学建物の間に設置されたアートです。2026年までの期間限定で、手が壊れたガラスの船を持ち、移民を思い起こさせます。",
+    "poi.111": "このアートワークは大通りと緑地の間の電力ボックスに描かれたグラフィティです。",
+    "poi.112": "交通量の多い通りと遊歩道の間にある緑地です。小川の一部も見えます。新入生週間にはパーティーにも使われます。",
+    "poi.113": "『ゴールデンブリッジ』はAa川がアーゼーに流れ込む場所にある橋です。",
+    "poi.114": "この彫刻はフリードリヒ・グレーゼル作で1971年に制作され、排気管を表現しています。LBSバウザルカッセ建物近くにあり、よく見ると複数の管があります。",
+    "poi.115": "この青銅像はLBSバウザルカッセとアーゼーの間の公園に置かれています。ベルンハルト・クラインハンス作、1973年。ヘラクレスや神話の生き物を描いています。",
+    "poi.116": "LBSバウザルカッセは建築的に興味深く、古くも未来的にも見える建物です。1975年建設で、窓からは平和そうに見えますが、中では人々が働いています。",
+    "poi.117": "この像はマドンナを描いており、1976年から存在し、2013年に修復されました。周囲には噴水と鉄柵があります。",
+    "poi.118": "この青銅作品はLBSバウザルカッセとアーゼーの間の緑地にあります。1968年頃、ヘンリー・ムーア作です。",
+    "poi.119": "このレリーフ地図は大学敷地の配置を示しています。建物や場所の感覚を視覚的・触覚的に把握でき、追加情報もあります。",
+    
+    "poi.120": "クーフ通りのバーで、青色の外観から「青い家」と呼ばれています。1970年開業。",
+    "poi.121": "1778年建築の二軒の家は、一部は見張り所や税関として使用されました。現在、一軒はギャラリー、もう一軒は2025年にカフェとして開店しました。",
+    "poi.122": "実物大の青銅像2体と白く塗装されたアルミ像3体が水盤の周りに配置されています。夏にリラックスして水の音を楽しめる素晴らしい場所です。",
+    "poi.123": "このグラフィティは遊歩道近くの旧建物ツヴィンガーを描いています。",
+    "poi.124": "ロタリンゲン聖歌隊教会は1764年頃、ヨハン・コンラート・シュラウン作で建てられたバロック教会です。現在は結婚登記所の支部として使用され、時折花嫁花婿も見られます。",
+    "poi.125": "ヘルスター広場の鷲の記念碑は1930年建立で、第一次世界大戦で戦死したプロイセン第4ロタリンゲン野砲兵連隊70の兵士を記念しています。破壊された大砲に立つ鷲は戦闘、忠誠心、軍事伝統を象徴します。",
+    "poi.126": "マウリッツトールの戦争記念碑は1909年に開設され、1864、1866、1870/71年の統一戦争で戦死したミュンスター兵を追悼しています。勝者を讃える記念碑として設計され、統一、愛国心、国民の結束を表現しています。",
+    "poi.127": "高校の外壁に描かれた顔です。ヨハン・コンラート・シュラウン博士を表し、この学校に名前が付けられています。彼は司教の建築家として、城、エルブドロステンホフ、多くの教会などを設計しました。背後には「ヨハン・コンラート」というレストランもあります。",
+    "poi.128": "シュラウン高校の壁にはカラフルな蝶の絵が描かれています。",
+    "poi.129": "映画館シネプレックスと港の始まりの間に、虹色の線が描かれています。斜めに広場を横断し、自転車利用者によく使われます。",
+    
+    "poi.130": "港沿いの建物は近年の港再開発による現代建築が特徴ですが、旧港建物も残っています。オフィス、レストラン、バー、アートルーム、遊歩道やベンチなどのレクリエーション空間として利用されます。",
+    "poi.131": "カフェ・ユニークのファサードは最近美しいグラフィティで装飾されましたが、残念ながら永久閉店しています。",
+    "poi.132": "中央駅近くのガレージ扉のグラフィティで、少年がミュンスターの人気建物や場所（大聖堂やプリンツィパルマルクトなど）を見ています。",
+    "poi.133": "ウル・テーラーの店の壁に、美しい蝶や花のグラフィティがあります。",
+    "poi.134": "この場所では『MÜNSTER FRIEDEN（ミュンスター平和）』の文字が芝生に描かれています。春夏には花で飾られます。",
+    "poi.135": "新使徒教会はカトリックでもプロテスタントでもありませんが、キリスト教会です。",
+    "poi.136": "この職業学校は専門教育を提供しています。建物はヨハン・コンラート・シュラウンの建築様式を反映しています。",
+    "poi.137": "ビスピンホフはミュンスター発祥の4つの農場の一つで、中世に大聖堂城に食料を供給していました。現在は市の所有で、大学の語学コースが開催されています。",
+    "poi.138": "アムツゲリヒト建物は1875〜1879年建設で、シュロスプラッツ南側に位置します。戦争で大部分が破壊され、再建されました。",
+    "poi.139": "ミュンスター大聖堂の天文時計は1540〜1542年建設で、時間だけでなく、太陽、月、惑星、黄道帯の動きを地球中心説に基づいて表示します。",
+
+    "route.1": "ミュンスターの歴史に浸ろう！このルートでは、さまざまな時代の古い建物や歴史的な名所を巡ります。街とその過去を発見したい人に最適です。",
+    "route.2": "ミュンスターでのサステナブルな旅：このルートでは、フェアトレードや持続可能性に重点を置いた選りすぐりの店や場所を紹介します。環境や責任、持続可能性を重視する人に理想的です。",
+    "route.3": "アート作品やグラフィティ——このルートでは、日常生活で見過ごしがちなアートを発見し、ミュンスターのクリエイティブな一面を楽しめます。",
+    "route.4": "建築に興味がありますか？このルートでは、歴史的建造物と現代建築を組み合わせ、異なる時代がミュンスターの街並みにどのような影響を与えたかを示します。",
+    "route.5": "人気で活気のあるクロイツヴィーテル地区：このルートでは、住宅文化と歴史、建築が融合する特別な通りや場所を紹介します。地区の特徴を感じられる旅です。",
+    "route.6": "犯罪現場の撮影やインターネットミーム——このルートでは、メディアで注目された場所や、写真や動画の裏に隠れたスポットを訪れます。",
+    "route.7": "ミュンスターをすでに知り尽くしていますか？このルートでは、多くのミュンスター専門家でさえ知らない特別な場所を紹介します。好奇心をそそられますね？"
 
 
 }
